--- a/federalreservebanks.yaml
+++ b/federalreservebanks.yaml
@@ -33,7 +33,7 @@ months:
   - name: Juneteenth National Independence Day
     regions: [federalreservebanks]
     mday: 19
-    observed: to_weekday_if_weekend(date)
+    observed: to_monday_if_sunday(date)
     year_ranges:
       from: 2021
   7:
@@ -92,17 +92,11 @@ tests:
     expect:
       name: "Memorial Day"
   - given:
-      date: ['2021-06-19']
-      regions: ["federalreservebanks"]
-      options: ["observed"]
-    expect:
-      holiday: false
-  - given:
       date: ['2021-06-18']
       regions: ["federalreservebanks"]
       options: ["observed"]
     expect:
-      name: "Juneteenth National Independence Day"
+      holiday: false
   - given:
       date: '2012-07-04'
       regions: ["federalreservebanks"]
@@ -819,3 +813,15 @@ tests:
       options: ["observed"]
     expect:
       name: "Christmas Day"
+  - given:
+      date: '2022-06-20'
+      regions: ["federalreservebanks"]
+      options: ["observed"]
+    expect:
+      name: "Juneteenth National Independence Day"
+  - given:
+      date: '2023-06-19'
+      regions: ["federalreservebanks"]
+      options: ["observed"]
+    expect:
+      name: "Juneteenth National Independence Day"
